Fix issue: text wraps

--- a/index.css
+++ b/index.css
@@ -18,7 +18,8 @@ body {
 }
 
 #input {
-    white-space: pre-wrap;
+    text-wrap: nowrap;
+    white-space: pre;
     display: inline-block;
 }
 
